# CARLsimPP

./: .gitignore  CMakeLists.txt  LICENSE  README-pi5.md  README.md
cmake/: BuildCARLcpp.cmake  BuildCARLsim6.cmake  BuildCARLsimGUI.cmake  BuildCARLsimIO.cmake  BuildCarlsimWrapper.cmake  BuildCudaSamples.cmake  BuildEigen3.cmake  BuildGTest.cmake  BuildRobotTestingFramework.cmake  BuildService.cmake  BuildXYZ.cmake  BuildYARP.cmake  BuildYarpDevCarlEpuck2.cmake  BuildYarpDevCarlWb.cmake  BuildYarpLibCarl.cmake  CARLsim++SuperbuildLogic.cmake  CARLsim++SuperbuildOptions.cmake  ProjectsTagsStable.cmake  ProjectsTagsUnstable.cmake
cmake/template/: addPathsToUserEnvVariables.ps1.in  addPathsToUserEnvVariables.sh.in  carlsimpp.conf.in  removePathsFromUserEnvVariables.ps1.in  setup.bat.in  setup.sh.in  startup_carlsimpp_superbuild.m.in
releases/: 2024.04.yaml
scripts/: carlsimppGitStatus.sh
